src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family:Arial, Helvetica, sans-serif
}

* > img {
  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
}

#root {
  display: flex;
  flex-direction: column;
  background-image: url('./images/background.jpeg');
  min-height: 100vh;
}

